--- a/day-008/package.json
+++ b/day-008/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
+    "build": "tsc -b && vite build && cp -r ./dist ../dist/day-008",
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -13,7 +13,9 @@
     "dev": "^0.1.3",
     "pnpm": "^10.18.1",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.9.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
