--- a/day-013/package.json
+++ b/day-013/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
+    "build": "tsc -b && vite build && cp -r ./dist ../dist/day-013",
     "lint": "eslint .",
     "preview": "vite preview"
   },
